--- a/css/mobile.css
+++ b/css/mobile.css
@@ -2,10 +2,13 @@
      position: fixed;
      padding-top: 20px;
      padding-bottom: 20px;
+     padding-left: 10px;
      top: 0px;
      height: 30px;
      width: 100%;
      background-color: #006026;
+     float: left;
+
 }
  #menutable{
      width: 100%;
@@ -49,7 +52,7 @@
      padding-left: 10px;
 }
  #picture-of-me{
-     margin-left: 35%;
+     margin-left: 5%;
 }
  #right{
      margin-top: 100px;
@@ -59,4 +62,50 @@
 }
 .centered {
      text-align: center;
+}
+.container {
+         display: inline-block;
+         cursor: pointer;
+}
+
+.bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #333;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+
+.change .bar1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+    transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .bar2 {opacity: 0;}
+
+.change .bar3 {
+    -webkit-transform: rotate(45deg) translate(-8px, -8px);
+    transform: rotate(45deg) translate(-8px, -8px);
+}
+.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+}
+
+
+
+.panel {
+    padding: 0 18px;
+    display: none;
+    background-color: #006026;
+    overflow: hidden;
+
 }
