--- a/css/mobile.css
+++ b/css/mobile.css
@@ -50,6 +50,7 @@
      float:left;
      padding-top: 50px;
      padding-left: 10px;
+     font-family: 'Raleway', serif;
 }
  #picture-of-me{
      margin-left: 5%;
