--- a/css/mobile.css
+++ b/css/mobile.css
@@ -16,9 +16,11 @@
 }
 #body {
     font-family: 'Raleway', serif;
+
 }
 #whbody {
     font-family: 'Raleway', serif;
+    padding-top: 60px;
 }
 .menulink {
     margin-left: 10px;
@@ -39,7 +41,7 @@
 #about {
     width: 100%;
     float: left;
-    padding-top: 50px;
+    padding-top: 60px;
 }
 .tool {
     position: absolute;
@@ -104,14 +106,13 @@
     background-color: #006026;
     overflow: hidden;
 }
-#logo{
+.logo{
      height: 214;
      width: 96%;
-     padding-top: 60px;
+     padding-top: 20px;
 }
+
 #cbody{
-     margin-top: 20px;
-     font-family: 'Raleway', serif;
-     background: white;
-     padding: 10px;
+    font-family: 'Raleway', serif;
+    padding-top: 60px;
 }
