--- a/css/mobile.css
+++ b/css/mobile.css
@@ -116,3 +116,7 @@
     font-family: 'Raleway', serif;
     padding-top: 60px;
 }
+#abody{
+    font-family: 'Raleway', serif;
+    padding-top: 60px;
+}
