--- a/css/index.css
+++ b/css/index.css
@@ -94,10 +94,7 @@
 }
 #connectbody {
      font-family: 'Raleway', serif;
-     max-width: 1500px;
-     margin: auto;
      background: white;
-     padding: 10px;
      margin-top: 200px;
-     margin-left: 30%;
+     padding-left: 35%;
 }
