--- a/css/mobile.css
+++ b/css/mobile.css
@@ -30,6 +30,9 @@
     font-size: 22px;
     text-align: center;
 }
+.left{
+     text-align: left;
+}
 .menulink:hover {
     text-decoration: underline;
 }
